adding flyway, more tests